--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 BackgroundColor generator/BackgroundColorGenerator.html
-coding examples(tests)
-Gsap Tute
-RandomBackgroundGenerator
+coding examples(tests)/
+Gsap Tute/
+RandomBackgroundGenerator/
